--- a/Views/Home/Contato.cshtml
+++ b/Views/Home/Contato.cshtml
@@ -1,5 +1,6 @@
 @{
     ViewData["Title"] = "Contato";
+    LojaVirtual.Models.Contato contato = (LojaVirtual.Models.Contato)ViewData["CONTATO"];
 }
 <main role="main">
     <br />
@@ -35,7 +36,14 @@
                 <div>
                     <article class="card">
                         <div class="card-body p-5">
-                            <p class="alert alert-success">Mensagem de sucesso!</p>
+                            @if(ViewData["MSG_S"] != null) 
+                            {
+                                <p class="alert alert-success">@Html.Raw(ViewData["MSG_S"])</p>
+                            }
+                            @if(ViewData["MSG_E"] != null) 
+                            {
+                                <p class="alert alert-danger">@Html.Raw(ViewData["MSG_E"])</p>
+                            }                            
                             <form role="form" method="POST" action="/Home/ContatoAcao">
                                 <div class="form-group">
                                     <label for="nome">Nome</label>
@@ -44,7 +52,7 @@
                                             <span class="input-group-text"><i class="fa fa-user"></i></span>
                                         </div>
                                         <input type="text" id="nome" class="form-control" name="nome" placeholder=""
-                                               required="">
+                                               required="" value="@(contato != null ? contato.Nome : "")" >
                                     </div> 
                                 </div> 
 
@@ -54,7 +62,7 @@
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fa fa-at"></i></span>
                                         </div>
-                                        <input type="text" id="email" class="form-control" name="email" placeholder="">
+                                        <input type="text" id="email" class="form-control" name="email" placeholder="" value="@(contato != null ? contato.Email : "")">
                                     </div> 
                                 </div> 
 
@@ -63,7 +71,7 @@
                                         <div class="form-group">
                                             <label for="texto"><span class="hidden-xs">Texto</span> </label>
                                             <div class="form-inline">
-                                                <textarea class="form-control" id="texto" name="texto" style="width:100%"></textarea>
+                                                <textarea class="form-control" id="texto" name="texto" style="width:100%">@(contato != null ? contato.Texto : "")</textarea>
 
                                             </div>
                                         </div>
